--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     </head>
 <body>
     <header>
+        <p>teste</p>
         <h1>Quiz interativopara programadores</h1>
         <p>Teste seus conhecimentos em programação e veja qual pontuação você consegue fazer!</p>
     </header>
